--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -4,6 +4,7 @@ $time: .3s ease
 $zindexwrap: 2
 
 $gradienth1black: linear-gradient(to right,transparent 0%,transparent 20%,#000 40%,#000 60%,transparent 80%,transparent 100%)
+$gradienth1white: linear-gradient(to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0) 20%,#fff 40%,#fff 60%,rgba(255,255,255,0) 80%,rgba(255,255,255,0) 100%)
 
 =keyframes($name)
   @-webkit-keyframes #{$name}
@@ -111,15 +112,21 @@ section,footer,header
 		padding-bottom: .5rem
 		position: relative
 		&:after
+			display: block
 			opacity: 1
-			transition: transform 625ms 625ms cubic-bezier(.694,0,.335,1), opacity 625ms 625ms cubic-bezier(.694,0,.335,1), background 0ms 1250ms step-end
+			transition: width 625ms 625ms cubic-bezier(.694,0,.335,1), background 625ms 625ms cubic-bezier(.694,0,.335,1), opacity 625ms 625ms cubic-bezier(.694,0,.335,1)
 			position: absolute
 			top: 100%
-			right: 1rem
+			right: 0
 			background: #000
 			content: ''
-			width: 100%
+			width: 0
+			
 			height: .1rem
+
+		&.is--active
+			&:after
+				width: 100%
 
 	&--small
 		padding: 1.3em 0
@@ -251,7 +258,7 @@ section,footer,header
 
 .paragraph
 	color: #767676
-	line-height: 2.2rem
+	line-height: 2em
 	&--main
 	
 		font-size: 1.3rem
@@ -271,7 +278,10 @@ section,footer,header
 		font-weight: 300
 		font-size: 1.4rem
 		&.is--left
-			padding-right: 5rem
+			padding-right: 8rem
+		& .text-link
+			color: #222
+			border-bottom: .1rem solid rgba(0,0,0,.3)
 
 
 		
@@ -332,7 +342,7 @@ section,footer,header
 									padding: 1.5rem 0
 									height: .1rem
 									margin: 0 .5rem
-									background-color: rgba(255,255,255, .2)
+									background-color: rgba(0,0,0, .2)
 									position: relative
 									opacity: 1
 									& .line
@@ -342,11 +352,11 @@ section,footer,header
 										transition: $time
 									&:hover
 										& .line
-											background-color: #cbcbcb
+											background-color: #000
 									&-active
-										background-color: rgba(255,255,255, .2)
+										background-color: rgba(0,0,0, .2)
 										& .line
-											background: #fff
+											background: #000
 											width: 100%
 											animation: progress 10000ms 1 linear
 
@@ -456,6 +466,31 @@ section,footer,header
 			position: relative
 			z-index: 3
 
+		&.is--black
+			& .title
+				background-image: $gradienth1white
+			& .title, & .note , & .paragraph
+				color: #fff
+				& a:after
+					background: #fff
+			& .btn
+				color: #000
+				background: #fff
+			& .link--change
+				&:after
+					// width: 100%
+			& .swiper
+					&-pagination
+						&-bullet
+							background-color: rgba(255,255,255, .2)
+							&:hover
+								& .line
+									background-color: #cbcbcb
+							&-active
+								background-color: rgba(255,255,255, .2)
+								& .line
+									background: #fff
+
 	&__slider
 		position: absolute
 		z-index: 2
@@ -559,10 +594,11 @@ section,footer,header
 
 
 
-.desing, .marketing
+
+.desing, .marketing, .support
 	padding-bottom: 18rem
 	.container-fluid
-		padding: 0 8vw
+		padding: 0 8vw 0 8vw
 	&__nav
 		position: absolute
 		bottom: 0
@@ -657,6 +693,8 @@ section,footer,header
 							background: rgba(0,0,0, .4)
 		
 
+
+
 .btns
 	margin-top: 4rem
 	& .btn
@@ -671,8 +709,22 @@ section,footer,header
 	padding: 2rem 0
 	z-index: 9
 	transition: transform 300ms cubic-bezier(.694,0,.335,1),visibility 300ms step-end
+
 	.container-fluid
 		padding: 0 8vw
+	&.is--black
+		& .link
+			color: #fff
+			& .svg-caret-down
+				stroke: #fff
+		& .squarespace-full
+			& path
+				fill: #fff
+		& .btn
+			color: #000
+			background: #fff
+		& .header__divider
+			background: #fff
 	&__divider
 		width: .1rem
 		height: 1.5em
@@ -707,12 +759,120 @@ section,footer,header
 
 
 .dropdown
-	&__tour
-		display: none
+	&__menu
+		// display: none
+		width: 32rem
+		margin-left: -16rem
 		z-index: 10
 		position: absolute
-		top: 100%
-		left: 0
+		top: 120%
+		left: 50%
+		opacity: 0
 		background: #fff
+		visibility: hidden
+		box-shadow: 0 .2rem 2.8rem .1rem rgba(0,0,0,.15)
+		border-radius: .4rem
+		color: #767676
+		transform: translate3d(0,-2rem,0)
+		transition: opacity 300ms cubic-bezier(.694,0,.335,1), visibility 300ms step-end, transform 300ms cubic-bezier(.694,0,.335,1)
 		&-list
 			list-style: none
+			margin-bottom: 0
+			padding: 1rem
+		&-item
+			border-bottom: .1rem solid #f5f5f5
+			&:last-child
+				border-bottom: none
+		&-caret
+			margin-top: -1rem
+			left: 50%
+			margin-left: -1rem
+			display: block
+			position: absolute
+			width: 2rem
+			height: 2rem
+			background: #fff
+			transform: rotate(45deg)
+			transition: top 300ms cubic-bezier(.694,0,.335,1)
+			top: 2rem
+		&-link
+			display: block
+			padding: 1rem
+			font-size: 1.5rem
+			line-height: 2em
+			text-transform: none
+			transition: color 100ms cubic-bezier(.694,0,.335,1), font-weight 100ms cubic-bezier(.694,0,.335,1)
+			font-weight: 300
+			&:hover
+				font-weight: 400
+				color: #222
+		&.is
+			&--active
+				transform: translate3d(0,1rem,0)
+				opacity: 1
+				visibility: visible
+				pointer-events: all
+				display: block
+				transition: opacity 300ms cubic-bezier(.694,0,.335,1), visibility 300ms step-start, transform 300ms cubic-bezier(.694,0,.335,1)
+				& .dropdown__menu-caret
+					top: 0
+
+.photo
+	width: 100%
+	height: 100%
+	
+	padding: 8rem 0
+	& img
+		width: 100%
+		// height: 100%
+		object-fit: cover
+	&__bg
+		max-width: 19vw
+		width: 100%
+		position: absolute
+		top: 0
+		left: 0
+		z-index: -1
+	&__front
+		max-width: 40.5vw
+		margin-right: 0
+		width: 100%
+		height: 100%
+		box-shadow: 0 1.8vw 4vw -0.7vw rgba(0,0,0,.2)
+
+.marketing
+	padding-top: 18rem	
+	padding-bottom: 10rem
+
+.domain
+	background: #f7f7f7
+	.container-fluid
+		padding: 0 8vw 0 8vw
+		& .photo
+			&__front
+				box-shadow: none
+
+.support
+	.container-fluid
+		padding: 0 0 0 8vw
+	& .paragraph
+		&.is
+			&--left
+				padding-right: 3rem
+	& .photo
+		height: 100%
+		padding: 0 0 0 0
+		&__front
+			max-width: 100%
+			position: absolute
+			top: 0
+			opacity: 1
+			right: 0
+			box-shadow: none
+			transition: opacity 700ms cubic-bezier(.694,0,.335,1)
+			&.is
+				&--hover
+					& + &:hover
+						opacity: 1
+					&:hover
+						opacity: 0
