--- a/app/css/main.css
+++ b/app/css/main.css
@@ -338,7 +338,7 @@ section, footer, header { width: 100%; position: relative; }
 
 .support .paragraph.is--left { padding-right: 3rem; }
 
-.support .photo { height: 100%; padding: 0 0 0 0; }
+.support .photo { height: 32vw; padding: 0 0 0 0; }
 
 .support .photo__front { max-width: 100%; position: absolute; top: 0; opacity: 1; right: 0; -webkit-box-shadow: none; box-shadow: none; -webkit-transition: opacity 700ms cubic-bezier(0.694, 0, 0.335, 1); -o-transition: opacity 700ms cubic-bezier(0.694, 0, 0.335, 1); transition: opacity 700ms cubic-bezier(0.694, 0, 0.335, 1); }
 
