--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -860,7 +860,8 @@ section,footer,header
 			&--left
 				padding-right: 3rem
 	& .photo
-		height: 100%
+		// max-height: 50vh
+		height: 32vw
 		padding: 0 0 0 0
 		&__front
 			max-width: 100%
