--- a/app/css/main.css
+++ b/app/css/main.css
@@ -14,7 +14,7 @@ html { position: relative; line-height: 1; font-size: 10px; -webkit-transition: 
 
 html.adminbg { height: 100%; }
 
-body { font-family: "Roboto", sans-serif; font-weight: 300; font-size: 1.3rem; background-color: #fff; color: #222; width: 100%; position: relative; -webkit-tap-highlight-color: transparent; }
+body { font-family: "Roboto", sans-serif; font-weight: 300; font-size: 1.3rem; background-color: #fff; color: #222; width: 100%; position: relative; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
 
 body.compensate-for-scrollbar { overflow: auto; margin-right: inherit; }
 
