--- a/app/sass/fonts.sass
+++ b/app/sass/fonts.sass
@@ -1,11 +1,13 @@
 @import "_mixins/font-face"
 
-+font-face("Roboto", "../fonts/Roboto-Thin", 100)
-+font-face("Roboto", "../fonts/Roboto-Light", 300)
-+font-face("Roboto", "../fonts/Roboto-Regular", 400)
-+font-face("Roboto", "../fonts/Roboto-Medium", 500)
-+font-face("Roboto", "../fonts/Roboto-Bold", 700)
-+font-face("Roboto", "../fonts/Roboto-Black", 900)
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500')
+
+// +font-face("Roboto", "../fonts/Roboto-Thin", 100)
+// +font-face("Roboto", "../fonts/Roboto-Light", 300)
+// +font-face("Roboto", "../fonts/Roboto-Regular", 400)
+// +font-face("Roboto", "../fonts/Roboto-Medium", 500)
+// +font-face("Roboto", "../fonts/Roboto-Bold", 700)
+// +font-face("Roboto", "../fonts/Roboto-Black", 900)
 // +font-face("Open Sans", "../fonts/OpenSans-Bold", 700)
 
 // +font-face("Bebas Neue", "../fonts/BebasNeueRegular", 400)
