Desktop, mobile, tablet, fonts cdn ready

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -123,6 +123,9 @@ section,footer,header
 			width: 0
 			
 			height: .1rem
+		@media (max-width: 767.98px)
+			&:after
+				content: none
 
 		&.is--active
 			&:after
@@ -141,6 +144,8 @@ section,footer,header
 		white-space: nowrap
 		&:hover
 			opacity: .8
+		@media (max-width: 767.98px)
+			font-size: 1rem
 		&.is
 			&--dropdown
 				& svg
@@ -152,7 +157,7 @@ section,footer,header
 					fill: none
 					stroke: #000
 					transition: transform 300ms cubic-bezier(.694,0,.335,1),stroke 300ms cubic-bezier(.694,0,.335,1),-webkit-transform 300ms cubic-bezier(.694,0,.335,1)
-	&-nav
+	&--nav
 		display: block
 		width: 100%
 		font-size: 1.2rem
@@ -161,6 +166,8 @@ section,footer,header
 
 		&:hover
 			color: #333
+		@media (max-width: 767.98px)
+			font-size: 1.4rem
 	&--logo
 		display: inline-block
 		& svg
@@ -173,13 +180,16 @@ section,footer,header
 			&--full
 				& svg
 					fill: #fff
-					width: 16.8rem
+					width: 3rem
+					&.is
+						&--full
+							width: 16.8rem
 			&--fill
 				& svg
 					fill: #000
 
 
-	&-dropdown
+	&--dropdown
 		margin-top: 4rem
 		display: flex
 		flex-direction: row
@@ -193,11 +203,18 @@ section,footer,header
 		max-width: 11rem
 		background: transparent
 		border: .1rem solid #e5e5e5
+
+			// display: block
 		& svg
 			display: block
 			width: .55rem
 		& + &
 			margin-top: 1rem
+		@media (max-width: 991.98px)
+			margin-top: 0
+			& + &
+				margin-top: 0
+				margin-left: 1rem
 
 
 
@@ -229,6 +246,8 @@ section,footer,header
 		border-color: transparent transparent rgba(0,0,0,.3) transparent
 		&.is--left
 			margin-left: 3.6rem
+			@media (max-width: 767.98px)
+				margin-left: 0
 		&:hover
 			opacity: 0.8
 	&--section
@@ -242,6 +261,10 @@ section,footer,header
 		text-transform: uppercase
 		&:hover
 			opacity: .8
+		@media (max-width: 767.98px)
+			padding: 1.6em 2.6em
+		@media (max-width: 330.98px)
+			padding: 1.3em 1.6em
 	&--white
 		justify-self: flex-end
 		background: transparent
@@ -266,6 +289,8 @@ section,footer,header
 		color: rgba(0,0,0,.5)
 		margin: 3rem auto 4rem auto
 		transition: opacity 700ms 400ms cubic-bezier(.694,0,.335,1),color 300ms cubic-bezier(.694,0,.335,1),transform 700ms 400ms cubic-bezier(.694,0,.335,1),-webkit-transform 700ms 400ms cubic-bezier(.694,0,.335,1)
+		@media (max-width: 767.98px)
+			padding: 0 8vw
 	&--subtitle
 		color: rgba(0,0,0,.5)
 		font-weight: 500
@@ -279,6 +304,11 @@ section,footer,header
 		font-size: 1.4rem
 		&.is--left
 			padding-right: 8rem
+			
+			@media (max-width: 1139.98px)
+				padding-right: 0
+			@media (max-width: 991.98px)
+				padding-right: 0
 		& .text-link
 			color: #222
 			border-bottom: .1rem solid rgba(0,0,0,.3)
@@ -299,6 +329,14 @@ section,footer,header
 		text-fill-color: #000
 		transition: background-position 1250ms 1250ms linear,visibility 0ms 1250ms linear,opacity 0ms 1250ms linear
 		color: #000
+		@media (max-width: 991.98px)
+			font-size: 4rem
+		@media (max-width: 767.98px)
+			font-size: 3rem
+			max-width: 80%
+			margin: 0 auto
+			
+
 		// &
 	&-slide
 		font-size: 1.7rem
@@ -320,6 +358,8 @@ section,footer,header
 		line-height: 1.63636364em
 		font-size: 2.2rem
 		letter-spacing: .20454545em
+		@media (max-width: 991.98px)
+			padding-right: 0
 		
 
 
@@ -395,7 +435,8 @@ section,footer,header
 				fill: none
 
 .team
-	padding: 10rem 0
+	@media (max-width: 991.98px)
+		padding: 5rem 0 5rem 0
 	& .container
 		&-fluid
 			padding: 0
@@ -448,6 +489,10 @@ section,footer,header
 	width: 100%
 	height: 100vh
 	min-height: 75rem
+	@media (max-width: 991.98px)
+		min-height: 50rem
+	@media (max-width: 767.98px)
+		min-height: 32rem
 	& .container-fluid
 		padding: 0
 		height: 100%
@@ -512,15 +557,28 @@ section,footer,header
 		width: 85%
 		max-width: 153rem
 		padding: 11rem 0 14rem 0
+		@media (max-width: 991.98px)
+			padding: 5rem 0 5rem 0
 	&__nav
+		flex: 1
+		@media (max-width: 767.98px)
+			padding: 2.3rem 0 0 0
+			border-bottom: .1rem solid #ccc
 		&--title
 			font-size: 1.2rem
 			margin-bottom: 2.2rem
 			letter-spacing: .21428571em
 			font-weight: 500
 			text-transform: uppercase
+			@media (max-width: 767.98px)
+				font-size: 1.4rem
+				&.active
+					.arrow-down
+						transform: rotate(180deg)
 		&--list
 			list-style: none
+			@media (max-width: 767.98px)
+				display: none
 		&--item
 			margin-bottom: .7rem
 			&:last-child
@@ -588,7 +646,9 @@ section,footer,header
 		
 
 .hero
-	padding-top: 14rem
+	padding: 14rem 0 9rem 0
+	@media (max-width: 991.98px)
+		padding: 5rem 0 0 0
 	.container-fluid
 		padding: 0 8vw
 
@@ -596,7 +656,9 @@ section,footer,header
 
 
 .desing, .marketing, .support
-	padding-bottom: 18rem
+	padding: 10rem 0 18rem 0
+	@media (max-width: 991.98px)
+		padding: 0 0 5rem 0
 	.container-fluid
 		padding: 0 8vw 0 8vw
 	&__nav
@@ -631,6 +693,11 @@ section,footer,header
 		margin-left: 0
 		width: 100%
 		height: 100%
+		@media (max-width: 991.98px)
+			margin-left: 20vw
+		@media (max-width: 767.98px)
+			max-width: 50vw
+			margin-left: 0vw
 		&-slide
 			width: 100%
 			height: 100%
@@ -650,6 +717,11 @@ section,footer,header
 		// bottom: 0
 		transform: translateY(-50%)
 		right: 0
+		@media (max-width: 991.98px)
+			right: 20vw
+		@media (max-width: 767.98px)
+			max-width: 75vw
+			right: 0
 		// left: 0
 		&-content
 			position: relative
@@ -717,9 +789,8 @@ section,footer,header
 			color: #fff
 			& .svg-caret-down
 				stroke: #fff
-		& .squarespace-full
-			& path
-				fill: #fff
+		& svg
+			stroke: #fff
 		& .btn
 			color: #000
 			background: #fff
@@ -775,6 +846,16 @@ section,footer,header
 		color: #767676
 		transform: translate3d(0,-2rem,0)
 		transition: opacity 300ms cubic-bezier(.694,0,.335,1), visibility 300ms step-end, transform 300ms cubic-bezier(.694,0,.335,1)
+		@media (max-width: 991.98px)
+			left: 0
+			margin-left: -5rem
+		@media (max-width: 767.98px)
+			left: 50%
+			margin-left: -16rem
+		@media (max-width: 480.98px)
+			width: 30rem
+			left: 50%
+			margin-left: -15rem
 		&-list
 			list-style: none
 			margin-bottom: 0
@@ -795,6 +876,12 @@ section,footer,header
 			transform: rotate(45deg)
 			transition: top 300ms cubic-bezier(.694,0,.335,1)
 			top: 2rem
+			@media (max-width: 991.98px)
+				left: 20%
+				margin-left: 0
+			@media (max-width: 767.98px)
+				left: 50%
+				margin-left: -1rem
 		&-link
 			display: block
 			padding: 1rem
@@ -822,6 +909,8 @@ section,footer,header
 	height: 100%
 	
 	padding: 8rem 0
+	@media (max-width: 991.98px)
+		padding: 5rem 0 2rem 0
 	& img
 		width: 100%
 		// height: 100%
@@ -833,19 +922,30 @@ section,footer,header
 		top: 0
 		left: 0
 		z-index: -1
+		@media (max-width: 991.98px)
+			margin-left: 15vw
+		@media (max-width: 767.98px)
+			max-width: 40vw
+			margin-left: 0vw
 	&__front
 		max-width: 40.5vw
 		margin-right: 0
 		width: 100%
 		height: 100%
 		box-shadow: 0 1.8vw 4vw -0.7vw rgba(0,0,0,.2)
+		@media (max-width: 767.98px)
+			max-width: 70vw
 
 .marketing
 	padding-top: 18rem	
 	padding-bottom: 10rem
+	@media (max-width: 991.98px)
+		padding: 5rem 0 5rem 0
 
 .domain
 	background: #f7f7f7
+	@media (max-width: 991.98px)
+		padding: 0 0 5rem 0
 	.container-fluid
 		padding: 0 8vw 0 8vw
 		& .photo
@@ -855,14 +955,26 @@ section,footer,header
 .support
 	.container-fluid
 		padding: 0 0 0 8vw
+		@media (max-width: 991.98px)
+			padding: 0 8vw 0 8vw
 	& .paragraph
 		&.is
 			&--left
 				padding-right: 3rem
+				@media (max-width: 1139.98px)
+					padding-right: 0
+				@media (max-width: 991.98px)
+					padding-right: 0
 	& .photo
 		// max-height: 50vh
 		height: 32vw
 		padding: 0 0 0 0
+		@media (max-width: 991.98px)
+			height: 32vw
+		@media (max-width: 767.98px)
+			height: 60vw
+
+		
 		&__front
 			max-width: 100%
 			position: absolute
@@ -871,9 +983,28 @@ section,footer,header
 			right: 0
 			box-shadow: none
 			transition: opacity 700ms cubic-bezier(.694,0,.335,1)
+			@media (max-width: 991.98px)
+				max-width: 60%
+				right: 50%
+				transform: translateX(50%)
+			@media (max-width: 767.98px)
+				max-width: 100%
 			&.is
 				&--hover
 					& + &:hover
 						opacity: 1
 					&:hover
 						opacity: 0
+
+.links
+	max-width: 100%
+	width: 100%
+
+.arrow-down
+	width: 1.4rem
+	fill: #000
+	float: right
+	display: inline-block
+	vertical-align: middle
+	transition: transform .3s ease
+	opacity: 1
