--- a/app/css/main.css
+++ b/app/css/main.css
@@ -40,31 +40,42 @@ section, footer, header { width: 100%; position: relative; }
 
 .link--change:after { display: block; opacity: 1; -webkit-transition: width 625ms 625ms cubic-bezier(0.694, 0, 0.335, 1), background 625ms 625ms cubic-bezier(0.694, 0, 0.335, 1), opacity 625ms 625ms cubic-bezier(0.694, 0, 0.335, 1); -o-transition: width 625ms 625ms cubic-bezier(0.694, 0, 0.335, 1), background 625ms 625ms cubic-bezier(0.694, 0, 0.335, 1), opacity 625ms 625ms cubic-bezier(0.694, 0, 0.335, 1); transition: width 625ms 625ms cubic-bezier(0.694, 0, 0.335, 1), background 625ms 625ms cubic-bezier(0.694, 0, 0.335, 1), opacity 625ms 625ms cubic-bezier(0.694, 0, 0.335, 1); position: absolute; top: 100%; right: 0; background: #000; content: ''; width: 0; height: .1rem; }
 
+@media (max-width: 767.98px) { .link--change:after { content: none; } }
+
 .link--change.is--active:after { width: 100%; }
 
 .link--small { padding: 1.3em 0; background: transparent; font-weight: 500; color: #000; font-size: 1.1rem; display: block; line-height: 1.1rem; letter-spacing: .2rem; text-transform: uppercase; white-space: nowrap; }
 
 .link--small:hover { opacity: .8; }
 
+@media (max-width: 767.98px) { .link--small { font-size: 1rem; } }
+
 .link--small.is--dropdown svg { width: 1rem; height: .8rem; stroke-width: .3rem; display: inline-block; margin-left: .2rem; fill: none; stroke: #000; transition: transform 300ms cubic-bezier(0.694, 0, 0.335, 1), stroke 300ms cubic-bezier(0.694, 0, 0.335, 1), -webkit-transform 300ms cubic-bezier(0.694, 0, 0.335, 1); }
 
-.link-nav { display: block; width: 100%; font-size: 1.2rem; line-height: 2.1rem; color: #888; }
+.link--nav { display: block; width: 100%; font-size: 1.2rem; line-height: 2.1rem; color: #888; }
 
-.link-nav:hover { color: #333; }
+.link--nav:hover { color: #333; }
+
+@media (max-width: 767.98px) { .link--nav { font-size: 1.4rem; } }
 
 .link--logo { display: inline-block; }
 
 .link--logo svg { -webkit-transition: fill 300ms cubic-bezier(0.694, 0, 0.335, 1); -o-transition: fill 300ms cubic-bezier(0.694, 0, 0.335, 1); transition: fill 300ms cubic-bezier(0.694, 0, 0.335, 1); display: block; width: 3rem; height: 2.5rem; }
 
-.link--logo.is--full svg { fill: #fff; width: 16.8rem; }
+.link--logo.is--full svg { fill: #fff; width: 3rem; }
+
+.link--logo.is--full svg.is--full { width: 16.8rem; }
 
 .link--logo.is--fill svg { fill: #000; }
 
-.link-dropdown { margin-top: 4rem; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: justify; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; text-align: left; color: #666; font-size: 1rem; padding: 1.25rem; width: 100%; max-width: 11rem; background: transparent; border: .1rem solid #e5e5e5; }
+.link--dropdown { margin-top: 4rem; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: justify; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; text-align: left; color: #666; font-size: 1rem; padding: 1.25rem; width: 100%; max-width: 11rem; background: transparent; border: 0.1rem solid #e5e5e5; }
 
-.link-dropdown svg { display: block; width: .55rem; }
+.link--dropdown svg { display: block; width: .55rem; }
 
-.link-dropdown + .link-dropdown { margin-top: 1rem; }
+.link--dropdown + .link--dropdown { margin-top: 1rem; }
+
+@media (max-width: 991.98px) { .link--dropdown { margin-top: 0; }
+  .link--dropdown + .link--dropdown { margin-top: 0; margin-left: 1rem; } }
 
 .btn { -webkit-border-radius: 0; border-radius: 0; outline: none; cursor: pointer; font-family: "Roboto", sans-serif; font-size: 1.4rem; -webkit-transition: opacity 300ms cubic-bezier(0.694, 0, 0.335, 1), background-color 300ms cubic-bezier(0.694, 0, 0.335, 1), color 300ms cubic-bezier(0.694, 0, 0.335, 1); -o-transition: opacity 300ms cubic-bezier(0.694, 0, 0.335, 1), background-color 300ms cubic-bezier(0.694, 0, 0.335, 1), color 300ms cubic-bezier(0.694, 0, 0.335, 1); transition: opacity 300ms cubic-bezier(0.694, 0, 0.335, 1), background-color 300ms cubic-bezier(0.694, 0, 0.335, 1), color 300ms cubic-bezier(0.694, 0, 0.335, 1); border: none; line-height: 1.1rem; text-align: center; font-weight: 500; letter-spacing: .091em; text-rendering: optimizeLegibility; text-transform: uppercase; -webkit-font-smoothing: antialiased; -webkit-appearance: none; -moz-appearance: none; appearance: none; }
 
@@ -74,11 +85,17 @@ section, footer, header { width: 100%; position: relative; }
 
 .btn--detail.is--left { margin-left: 3.6rem; }
 
+@media (max-width: 767.98px) { .btn--detail.is--left { margin-left: 0; } }
+
 .btn--detail:hover { opacity: 0.8; }
 
 .btn--section { font-size: 1.1rem; display: inline-block; padding: 1.8em 3.6em; color: #fff; background: black; letter-spacing: .2rem; text-transform: uppercase; }
 
 .btn--section:hover { opacity: .8; }
+
+@media (max-width: 767.98px) { .btn--section { padding: 1.6em 2.6em; } }
+
+@media (max-width: 330.98px) { .btn--section { padding: 1.3em 1.6em; } }
 
 .btn--white { justify-self: flex-end; background: transparent; color: #000; border: .11rem solid #000; }
 
@@ -90,6 +107,8 @@ section, footer, header { width: 100%; position: relative; }
 
 .paragraph--main { font-size: 1.3rem; max-width: 34em; color: rgba(0, 0, 0, 0.5); margin: 3rem auto 4rem auto; transition: opacity 700ms 400ms cubic-bezier(0.694, 0, 0.335, 1), color 300ms cubic-bezier(0.694, 0, 0.335, 1), transform 700ms 400ms cubic-bezier(0.694, 0, 0.335, 1), -webkit-transform 700ms 400ms cubic-bezier(0.694, 0, 0.335, 1); }
 
+@media (max-width: 767.98px) { .paragraph--main { padding: 0 8vw; } }
+
 .paragraph--subtitle { color: rgba(0, 0, 0, 0.5); font-weight: 500; letter-spacing: .33333333em; font-size: .9rem; }
 
 .paragraph-slide { font-weight: 300; font-size: 1.4rem; }
@@ -98,11 +117,19 @@ section, footer, header { width: 100%; position: relative; }
 
 .paragraph--section.is--left { padding-right: 8rem; }
 
+@media (max-width: 1139.98px) { .paragraph--section.is--left { padding-right: 0; } }
+
+@media (max-width: 991.98px) { .paragraph--section.is--left { padding-right: 0; } }
+
 .paragraph--section .text-link { color: #222; border-bottom: 0.1rem solid rgba(0, 0, 0, 0.3); }
 
 .title { color: #222; }
 
 .title--main { background-image: -webkit-gradient(linear, left top, right top, from(transparent), color-stop(20%, transparent), color-stop(40%, #000), color-stop(60%, #000), color-stop(80%, transparent), to(transparent)); background-image: -webkit-linear-gradient(left, transparent 0%, transparent 20%, #000 40%, #000 60%, transparent 80%, transparent 100%); background-image: -o-linear-gradient(left, transparent 0%, transparent 20%, #000 40%, #000 60%, transparent 80%, transparent 100%); background-image: linear-gradient(to right, transparent 0%, transparent 20%, #000 40%, #000 60%, transparent 80%, transparent 100%); background-position: 50% center; position: relative; -webkit-background-size: 500% auto; background-size: 500% auto; font-size: 5.5rem; font-weight: 400; -webkit-background-clip: text; background-clip: text; text-rendering: geometricPrecision; text-fill-color: #000; -webkit-transition: background-position 1250ms 1250ms linear,visibility 0ms 1250ms linear,opacity 0ms 1250ms linear; -o-transition: background-position 1250ms 1250ms linear,visibility 0ms 1250ms linear,opacity 0ms 1250ms linear; transition: background-position 1250ms 1250ms linear,visibility 0ms 1250ms linear,opacity 0ms 1250ms linear; color: #000; }
+
+@media (max-width: 991.98px) { .title--main { font-size: 4rem; } }
+
+@media (max-width: 767.98px) { .title--main { font-size: 3rem; max-width: 80%; margin: 0 auto; } }
 
 .title-slide { font-size: 1.7rem; letter-spacing: .21428571rem; font-weight: 500; text-transform: uppercase; }
 
@@ -111,6 +138,8 @@ section, footer, header { width: 100%; position: relative; }
 .title--section { letter-spacing: .21428571rem; font-weight: 500; text-transform: uppercase; font-size: 1.7rem; }
 
 .title--side { margin: 2rem 0; padding-right: 5rem; line-height: 1.63636364em; font-size: 2.2rem; letter-spacing: .20454545em; }
+
+@media (max-width: 991.98px) { .title--side { padding-right: 0; } }
 
 .swiper-container-horizontal > .swiper-pagination-bullets { bottom: 6.5rem; }
 
@@ -136,7 +165,7 @@ section, footer, header { width: 100%; position: relative; }
 
 .fancybox-button svg line { stroke: #fff; fill: none; }
 
-.team { padding: 10rem 0; }
+@media (max-width: 991.98px) { .team { padding: 5rem 0 5rem 0; } }
 
 .team .container-fluid { padding: 0; }
 
@@ -161,6 +190,10 @@ section, footer, header { width: 100%; position: relative; }
 .team .container-fluid .team__slider--direct { opacity: 0; position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; background: transparent; -webkit-transition: 0.3s ease; -o-transition: 0.3s ease; transition: 0.3s ease; }
 
 .main { width: 100%; height: 100vh; min-height: 75rem; }
+
+@media (max-width: 991.98px) { .main { min-height: 50rem; } }
+
+@media (max-width: 767.98px) { .main { min-height: 32rem; } }
 
 .main .container-fluid { padding: 0; height: 100%; }
 
@@ -196,9 +229,20 @@ section, footer, header { width: 100%; position: relative; }
 
 .footer .container-fluid { width: 85%; max-width: 153rem; padding: 11rem 0 14rem 0; }
 
+@media (max-width: 991.98px) { .footer .container-fluid { padding: 5rem 0 5rem 0; } }
+
+.footer__nav { -webkit-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1; }
+
+@media (max-width: 767.98px) { .footer__nav { padding: 2.3rem 0 0 0; border-bottom: .1rem solid #ccc; } }
+
 .footer__nav--title { font-size: 1.2rem; margin-bottom: 2.2rem; letter-spacing: .21428571em; font-weight: 500; text-transform: uppercase; }
 
+@media (max-width: 767.98px) { .footer__nav--title { font-size: 1.4rem; }
+  .footer__nav--title.active .arrow-down { -webkit-transform: rotate(180deg); -ms-transform: rotate(180deg); transform: rotate(180deg); } }
+
 .footer__nav--list { list-style: none; }
+
+@media (max-width: 767.98px) { .footer__nav--list { display: none; } }
 
 .footer__nav--item { margin-bottom: .7rem; }
 
@@ -230,11 +274,15 @@ section, footer, header { width: 100%; position: relative; }
 
 .drop .fancybox-content .list__currency--link.active:after { -webkit-transform: scale3d(1, 1, 1); transform: scale3d(1, 1, 1); }
 
-.hero { padding-top: 14rem; }
+.hero { padding: 14rem 0 9rem 0; }
+
+@media (max-width: 991.98px) { .hero { padding: 5rem 0 0 0; } }
 
 .hero .container-fluid { padding: 0 8vw; }
 
-.desing, .marketing, .support { padding-bottom: 18rem; }
+.desing, .marketing, .support { padding: 10rem 0 18rem 0; }
+
+@media (max-width: 991.98px) { .desing, .marketing, .support { padding: 0 0 5rem 0; } }
 
 .desing .container-fluid, .marketing .container-fluid, .support .container-fluid { padding: 0 8vw 0 8vw; }
 
@@ -250,6 +298,10 @@ section, footer, header { width: 100%; position: relative; }
 
 .desing__bg, .marketing__bg, .support__bg { max-width: 27vw; margin-left: 0; width: 100%; height: 100%; }
 
+@media (max-width: 991.98px) { .desing__bg, .marketing__bg, .support__bg { margin-left: 20vw; } }
+
+@media (max-width: 767.98px) { .desing__bg, .marketing__bg, .support__bg { max-width: 50vw; margin-left: 0vw; } }
+
 .desing__bg-slide, .marketing__bg-slide, .support__bg-slide { width: 100%; height: 100%; }
 
 .desing__bg-slide img, .marketing__bg-slide img, .support__bg-slide img { width: 100%; height: 100%; -o-object-fit: cover; object-fit: cover; }
@@ -257,6 +309,10 @@ section, footer, header { width: 100%; position: relative; }
 .desing__sliders, .marketing__sliders, .support__sliders { position: relative; }
 
 .desing__slider, .marketing__slider, .support__slider { max-width: 38vw; width: 100%; position: absolute; top: 50%; -webkit-box-shadow: 0 1.8vw 4vw -0.7vw rgba(0, 0, 0, 0.2); box-shadow: 0 1.8vw 4vw -0.7vw rgba(0, 0, 0, 0.2); margin: auto; -webkit-transform: translateY(-50%); -ms-transform: translateY(-50%); transform: translateY(-50%); right: 0; }
+
+@media (max-width: 991.98px) { .desing__slider, .marketing__slider, .support__slider { right: 20vw; } }
+
+@media (max-width: 767.98px) { .desing__slider, .marketing__slider, .support__slider { max-width: 75vw; right: 0; } }
 
 .desing__slider-content, .marketing__slider-content, .support__slider-content { position: relative; width: 100%; }
 
@@ -282,7 +338,7 @@ section, footer, header { width: 100%; position: relative; }
 
 .header.is--black .link .svg-caret-down { stroke: #fff; }
 
-.header.is--black .squarespace-full path { fill: #fff; }
+.header.is--black svg { stroke: #fff; }
 
 .header.is--black .btn { color: #000; background: #fff; }
 
@@ -302,6 +358,12 @@ section, footer, header { width: 100%; position: relative; }
 
 .dropdown__menu { width: 32rem; margin-left: -16rem; z-index: 10; position: absolute; top: 120%; left: 50%; opacity: 0; background: #fff; visibility: hidden; -webkit-box-shadow: 0 0.2rem 2.8rem 0.1rem rgba(0, 0, 0, 0.15); box-shadow: 0 0.2rem 2.8rem 0.1rem rgba(0, 0, 0, 0.15); -webkit-border-radius: .4rem; border-radius: .4rem; color: #767676; -webkit-transform: translate3d(0, -2rem, 0); transform: translate3d(0, -2rem, 0); -webkit-transition: opacity 300ms cubic-bezier(0.694, 0, 0.335, 1), visibility 300ms step-end, -webkit-transform 300ms cubic-bezier(0.694, 0, 0.335, 1); transition: opacity 300ms cubic-bezier(0.694, 0, 0.335, 1), visibility 300ms step-end, -webkit-transform 300ms cubic-bezier(0.694, 0, 0.335, 1); -o-transition: opacity 300ms cubic-bezier(0.694, 0, 0.335, 1), visibility 300ms step-end, transform 300ms cubic-bezier(0.694, 0, 0.335, 1); transition: opacity 300ms cubic-bezier(0.694, 0, 0.335, 1), visibility 300ms step-end, transform 300ms cubic-bezier(0.694, 0, 0.335, 1); transition: opacity 300ms cubic-bezier(0.694, 0, 0.335, 1), visibility 300ms step-end, transform 300ms cubic-bezier(0.694, 0, 0.335, 1), -webkit-transform 300ms cubic-bezier(0.694, 0, 0.335, 1); }
 
+@media (max-width: 991.98px) { .dropdown__menu { left: 0; margin-left: -5rem; } }
+
+@media (max-width: 767.98px) { .dropdown__menu { left: 50%; margin-left: -16rem; } }
+
+@media (max-width: 480.98px) { .dropdown__menu { width: 30rem; left: 50%; margin-left: -15rem; } }
+
 .dropdown__menu-list { list-style: none; margin-bottom: 0; padding: 1rem; }
 
 .dropdown__menu-item { border-bottom: .1rem solid #f5f5f5; }
@@ -309,6 +371,10 @@ section, footer, header { width: 100%; position: relative; }
 .dropdown__menu-item:last-child { border-bottom: none; }
 
 .dropdown__menu-caret { margin-top: -1rem; left: 50%; margin-left: -1rem; display: block; position: absolute; width: 2rem; height: 2rem; background: #fff; -webkit-transform: rotate(45deg); -ms-transform: rotate(45deg); transform: rotate(45deg); -webkit-transition: top 300ms cubic-bezier(0.694, 0, 0.335, 1); -o-transition: top 300ms cubic-bezier(0.694, 0, 0.335, 1); transition: top 300ms cubic-bezier(0.694, 0, 0.335, 1); top: 2rem; }
+
+@media (max-width: 991.98px) { .dropdown__menu-caret { left: 20%; margin-left: 0; } }
+
+@media (max-width: 767.98px) { .dropdown__menu-caret { left: 50%; margin-left: -1rem; } }
 
 .dropdown__menu-link { display: block; padding: 1rem; font-size: 1.5rem; line-height: 2em; text-transform: none; -webkit-transition: color 100ms cubic-bezier(0.694, 0, 0.335, 1), font-weight 100ms cubic-bezier(0.694, 0, 0.335, 1); -o-transition: color 100ms cubic-bezier(0.694, 0, 0.335, 1), font-weight 100ms cubic-bezier(0.694, 0, 0.335, 1); transition: color 100ms cubic-bezier(0.694, 0, 0.335, 1), font-weight 100ms cubic-bezier(0.694, 0, 0.335, 1); font-weight: 300; }
 
@@ -320,15 +386,27 @@ section, footer, header { width: 100%; position: relative; }
 
 .photo { width: 100%; height: 100%; padding: 8rem 0; }
 
+@media (max-width: 991.98px) { .photo { padding: 5rem 0 2rem 0; } }
+
 .photo img { width: 100%; -o-object-fit: cover; object-fit: cover; }
 
 .photo__bg { max-width: 19vw; width: 100%; position: absolute; top: 0; left: 0; z-index: -1; }
 
+@media (max-width: 991.98px) { .photo__bg { margin-left: 15vw; } }
+
+@media (max-width: 767.98px) { .photo__bg { max-width: 40vw; margin-left: 0vw; } }
+
 .photo__front { max-width: 40.5vw; margin-right: 0; width: 100%; height: 100%; -webkit-box-shadow: 0 1.8vw 4vw -0.7vw rgba(0, 0, 0, 0.2); box-shadow: 0 1.8vw 4vw -0.7vw rgba(0, 0, 0, 0.2); }
+
+@media (max-width: 767.98px) { .photo__front { max-width: 70vw; } }
 
 .marketing { padding-top: 18rem; padding-bottom: 10rem; }
 
+@media (max-width: 991.98px) { .marketing { padding: 5rem 0 5rem 0; } }
+
 .domain { background: #f7f7f7; }
+
+@media (max-width: 991.98px) { .domain { padding: 0 0 5rem 0; } }
 
 .domain .container-fluid { padding: 0 8vw 0 8vw; }
 
@@ -336,12 +414,30 @@ section, footer, header { width: 100%; position: relative; }
 
 .support .container-fluid { padding: 0 0 0 8vw; }
 
+@media (max-width: 991.98px) { .support .container-fluid { padding: 0 8vw 0 8vw; } }
+
 .support .paragraph.is--left { padding-right: 3rem; }
+
+@media (max-width: 1139.98px) { .support .paragraph.is--left { padding-right: 0; } }
+
+@media (max-width: 991.98px) { .support .paragraph.is--left { padding-right: 0; } }
 
 .support .photo { height: 32vw; padding: 0 0 0 0; }
 
+@media (max-width: 991.98px) { .support .photo { height: 32vw; } }
+
+@media (max-width: 767.98px) { .support .photo { height: 60vw; } }
+
 .support .photo__front { max-width: 100%; position: absolute; top: 0; opacity: 1; right: 0; -webkit-box-shadow: none; box-shadow: none; -webkit-transition: opacity 700ms cubic-bezier(0.694, 0, 0.335, 1); -o-transition: opacity 700ms cubic-bezier(0.694, 0, 0.335, 1); transition: opacity 700ms cubic-bezier(0.694, 0, 0.335, 1); }
+
+@media (max-width: 991.98px) { .support .photo__front { max-width: 60%; right: 50%; -webkit-transform: translateX(50%); -ms-transform: translateX(50%); transform: translateX(50%); } }
+
+@media (max-width: 767.98px) { .support .photo__front { max-width: 100%; } }
 
 .support .photo__front.is--hover + .support .photo__front.is--hover:hover { opacity: 1; }
 
 .support .photo__front.is--hover:hover { opacity: 0; }
+
+.links { max-width: 100%; width: 100%; }
+
+.arrow-down { width: 1.4rem; fill: #000; float: right; display: inline-block; vertical-align: middle; -webkit-transition: -webkit-transform .3s ease; transition: -webkit-transform .3s ease; -o-transition: transform .3s ease; transition: transform .3s ease; transition: transform .3s ease, -webkit-transform .3s ease; opacity: 1; }
